[gd_scene load_steps=13 format=2]

[ext_resource path="res://GameComponents/Fireworks/fireworks.gd" type="Script" id=1]
[ext_resource path="res://Assets/ArenaBackgrounds/City/art/city_alley.png" type="Texture" id=2]
[ext_resource path="res://Assets/ArenaBackgrounds/City/art/city_street.png" type="Texture" id=3]
[ext_resource path="res://GameComponents/ArenaBackgrounds/City/city_background.gd" type="Script" id=4]
[ext_resource path="res://GameComponents/ArenaBackgrounds/City/scenes/CityBuildingLeft.tscn" type="PackedScene" id=5]
[ext_resource path="res://GameComponents/ArenaBackgrounds/scenes/Sky/NightSky.tscn" type="PackedScene" id=6]
[ext_resource path="res://GameComponents/ArenaBackgrounds/City/scenes/CityBuildingRight.tscn" type="PackedScene" id=7]
[ext_resource path="res://GameComponents/ArenaBackgrounds/City/scenes/CityStadium.tscn" type="PackedScene" id=8]
[ext_resource path="res://GameComponents/ArenaBackgrounds/scenes/Seagull/Seagull.tscn" type="PackedScene" id=9]
[ext_resource path="res://Assets/GameMusic/city_streets.ogg" type="AudioStream" id=10]

[sub_resource type="Animation" id=1]
resource_name = "RESET"
length = 0.001
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1480, -100 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fly_into_scene"
length = 30.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3, 3.7, 3.9, 4.1, 4.8, 5, 5.2, 5.9, 6.1, 6.3, 9.9, 10.5, 13.1, 18.2, 18.5, 18.8, 21.8, 22.2, 22.6, 25.9, 30 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1480, -100 ), Vector2( 1100, 158 ), Vector2( 1100, 158 ), Vector2( 1060, 118 ), Vector2( 1020, 158 ), Vector2( 1020, 158 ), Vector2( 1005, 130 ), Vector2( 970, 158 ), Vector2( 970, 158 ), Vector2( 941, 127 ), Vector2( 900, 158 ), Vector2( 900, 158 ), Vector2( 860, 128 ), Vector2( 525, 545 ), Vector2( 525, 545 ), Vector2( 560, 528 ), Vector2( 600, 610 ), Vector2( 600, 610 ), Vector2( 640, 580 ), Vector2( 675, 615 ), Vector2( 675, 615 ), Vector2( 1480, -100 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 17.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 9.9, 13, 25.9, 27.1, 30 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0.7, 0.7 ), Vector2( 0.7, 0.7 ), Vector2( 1.4, 1.4 ), Vector2( 1.4, 1.4 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2.8, 3.9, 4.9, 6, 7.8, 10, 12.9, 14.4, 15.6, 18.6, 19.8, 22.3, 23.1, 24, 25.1, 25.9, 27.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "fly"
}, {
"args": [  ],
"method": "land"
}, {
"args": [  ],
"method": "land"
}, {
"args": [  ],
"method": "land"
}, {
"args": [  ],
"method": "land"
}, {
"args": [  ],
"method": "peck"
}, {
"args": [  ],
"method": "take_off"
}, {
"args": [  ],
"method": "land"
}, {
"args": [  ],
"method": "peck"
}, {
"args": [  ],
"method": "peck"
}, {
"args": [  ],
"method": "land"
}, {
"args": [  ],
"method": "peck"
}, {
"args": [  ],
"method": "land"
}, {
"args": [  ],
"method": "peck"
}, {
"args": [  ],
"method": "peck"
}, {
"args": [  ],
"method": "peck"
}, {
"args": [  ],
"method": "take_off"
}, {
"args": [ true ],
"method": "allow_game_ball_hit"
} ]
}

[node name="CityBackground" type="Node2D"]
script = ExtResource( 4 )

[node name="NightSky" parent="." instance=ExtResource( 6 )]

[node name="GameWonFireworks" type="ColorRect" parent="."]
margin_left = 536.0
margin_top = 155.0
margin_right = 736.0
margin_bottom = 255.0
color = Color( 1, 0.5, 0.5, 0.5 )
script = ExtResource( 1 )
_firework_scale = 0.8

[node name="CityStadium" parent="." instance=ExtResource( 8 )]
position = Vector2( 640, 532 )

[node name="AlleySprite" type="Sprite" parent="."]
position = Vector2( 640, 463 )
texture = ExtResource( 2 )

[node name="StreetSprite" type="Sprite" parent="."]
position = Vector2( 0, 787 )
texture = ExtResource( 3 )
offset = Vector2( 640, 0 )

[node name="CityBuildingLeft" parent="." instance=ExtResource( 5 )]
position = Vector2( -50, 638 )

[node name="CityBuildingRight" parent="." instance=ExtResource( 7 )]
position = Vector2( 776, 638 )

[node name="Seagull" parent="." instance=ExtResource( 9 )]
position = Vector2( 1480, -100 )
flip_h = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Seagull"]
autoplay = "RESET"
anims/RESET = SubResource( 1 )
anims/fly_into_scene = SubResource( 2 )

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 10 )
autoplay = true
bus = "Music"

[node name="Tween" type="Tween" parent="."]
